--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,25 @@ body {
   grid-column: sidebar-start / sidebar-end;
   grid-row: 1 / -1; }
 
+.nav-btn {
+  border: none;
+  border-radius: 0;
+  height: 2px;
+  width: 4.5rem;
+  background-color: #fff;
+  margin: 4rem auto;
+  display: block; }
+  .nav-btn::after, .nav-btn::before {
+    content: '';
+    height: 2px;
+    width: 4.5rem;
+    background-color: #fff;
+    display: block; }
+  .nav-btn::after {
+    transform: translateY(1.3rem); }
+  .nav-btn::before {
+    transform: translateY(-1.5rem); }
+
 .header {
   background-color: lawngreen;
   grid-column: full-start / col-end 6; }
@@ -252,5 +271,32 @@ body {
     display: block; }
 
 .footer {
-  background-color: goldenrod;
-  grid-column: full-start / full-end; }
+  background-color: #101d2c;
+  grid-column: full-start / full-end;
+  padding: 8rem; }
+
+.nav {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  grid-gap: 2rem; }
+  .nav__link:link, .nav__link:visited {
+    display: block;
+    padding: 1.5rem;
+    font-size: 1.4rem;
+    font-family: "Josefin Sans", sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    text-decoration: none;
+    color: #fff;
+    transition: all .2s ease-out; }
+  .nav__link:hover, .nav__link:active {
+    background-color: rgba(255, 255, 255, 0.05);
+    transform: translateY(-3px); }
+
+.copyright {
+  color: #aaa;
+  font-size: 1.4rem;
+  margin: 6rem auto 0;
+  text-align: center;
+  width: 70%; }
