--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -3,3 +3,30 @@
     grid-column: sidebar-start / sidebar-end;
     grid-row: 1 / -1;
 }
+
+.nav-btn {
+    border: none;
+    border-radius: 0;
+    height: 2px;
+    width: 4.5rem;
+    background-color: #fff;
+    margin: 4rem auto;
+    display: block;
+
+    &::after,
+    &::before {
+        content: '';
+        height: 2px;
+        width: 4.5rem;
+        background-color: #fff;
+        display: block;
+    }
+
+    &::after {
+        transform: translateY(1.3rem);
+    }
+    
+    &::before {
+        transform: translateY(-1.5rem);
+    }
+}
