--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,4 +1,53 @@
 .header {
-    background-color: lawngreen;
+    background-color: $color-secondary;
     grid-column: full-start / col-end 6;
+
+    background-image: linear-gradient(rgba($color-secondary, .93), rgba($color-secondary, .93)), url(../img/hero.jpeg);
+    background-size: cover;
+    background-position: center;
+    padding: 4rem 8rem 8rem;
+
+    display: grid;
+    grid-template-rows: 1fr min-content 6rem 1fr;
+    grid-template-columns: max-content;
+    justify-content: center;
+    grid-row-gap: 1.5rem;
+
+    &__logo {
+        height: 3rem;
+        justify-self: center;
+    }
+
+    &__btn {
+        align-self: start;
+        justify-self: start;
+    }
+
+    &__seenon-text {
+        display: grid;
+        grid-template-columns: 1fr max-content 1fr;
+        align-items: center;
+        grid-column-gap: 1.5rem;
+
+        font-size: 1.6rem;
+        color: $color-grey-light-2;
+
+        &::after,
+        &::before {
+            content: '';
+            display: block;
+            height: 1px;
+            background-color: currentColor;
+        }
+    }
+
+    &__seenon-logos {
+        display: flex;
+        justify-content: space-around;
+
+        img {
+            height: 2.5rem;
+            filter: brightness(70%);
+        }
+    }
 }
