--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -1,4 +1,32 @@
 .realtors {
-    background-color: khaki;
+    background-color: $color-secondary;
     grid-column: col-start 7 / full-end;
+    padding: 3rem;
+
+    display: grid;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
+    grid-row-gap: 2rem;
+
+
+    &__list {
+        display: grid;
+        grid-template-columns: max-content max-content;
+        grid-column-gap: 2rem;
+        grid-row-gap: 5vh;
+        align-items: center;
+    }
+
+    &__img {
+        width: 7rem;
+        border-radius: 50%;
+        display: block;
+    }
+
+    &__sales {
+        margin-top: -3px;
+        color: $color-grey-light-2;
+        text-transform: uppercase;
+    }
 }
