--- a/css/style.css
+++ b/css/style.css
@@ -61,9 +61,11 @@ body {
   border-radius: 0;
   padding: 1.8rem 3rem;
   cursor: pointer;
-  transition: background-color .2s ease-out; }
+  box-shadow: 0 0.5rem 2.5rem rgba(46, 61, 73, 0.2);
+  transition: all .2s ease-out; }
   .btn:hover {
-    background-color: #B28451; }
+    background-color: #B28451;
+    box-shadow: 0 0.5rem 1rem 0 rgba(46, 61, 73, 0.2); }
 
 .mb-s {
   margin-bottom: 2rem; }
@@ -104,13 +106,13 @@ body {
 .header {
   background-color: #101d2c;
   grid-column: full-start / col-end 6;
-  background-image: linear-gradient(rgba(16, 29, 44, 0.93), rgba(16, 29, 44, 0.93)), url(../img/hero.jpeg);
+  background-image: linear-gradient(rgba(16, 29, 44, 0.93), rgba(16, 29, 44, 0.93)), url(../img/hero.jpg);
   background-size: cover;
   background-position: center;
   padding: 4rem 8rem 8rem;
   display: grid;
-  grid-template-rows: 1fr min-content 6rem 1fr;
-  grid-template-columns: max-content;
+  grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
+  grid-template-columns: minmax(min-content, max-content);
   justify-content: center;
   grid-row-gap: 1.5rem; }
   .header__logo {
@@ -135,7 +137,8 @@ body {
     display: flex;
     justify-content: space-around; }
     .header__seenon-logos img {
-      height: 2.5rem;
+      max-height: 2.5rem;
+      max-width: 100%;
       filter: brightness(70%); }
 
 .realtors {
@@ -227,12 +230,16 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   grid-gap: 7rem;
-  margin: 15rem 0; }
+  padding: 15rem 0; }
 
 .home {
   background-color: #f9f7f6;
+  box-shadow: 0 0.5rem 2.5rem rgba(46, 61, 73, 0.2);
+  transition: box-shadow .2s ease-out;
   display: grid;
   grid-template-columns: 1fr 1fr; }
+  .home:hover {
+    box-shadow: 0 0.5rem 1rem 0 rgba(46, 61, 73, 0.2); }
   .home__img {
     width: 100%;
     grid-column: 1 / -1;
@@ -270,7 +277,10 @@ body {
       height: 2rem;
       margin-right: 1rem; }
   .home__btn {
-    grid-column: 1 / -1; }
+    grid-column: 1 / -1;
+    box-shadow: 0 0 0 0; }
+    .home__btn:hover {
+      box-shadow: 0 0 0 0; }
 
 .gallery {
   background-color: #f9f7f6;
@@ -280,48 +290,53 @@ body {
   grid-template-rows: repeat(7, 5vw);
   grid-gap: 1.5rem;
   padding: 1.5rem; }
-  .gallery__item--1 {
-    grid-column: 1 / span 2;
-    grid-row: 1 / span 2; }
-  .gallery__item--2 {
-    grid-column: 3 / span 3;
-    grid-row: 1 / span 3; }
-  .gallery__item--3 {
-    grid-column: 6 / span 1;
-    grid-row: 1 / span 2; }
-  .gallery__item--4 {
-    grid-column: 7 / span 2;
-    grid-row: 1 / span 2; }
-  .gallery__item--5 {
-    grid-column: 1 / span 2;
-    grid-row: 3 / span 3; }
-  .gallery__item--6 {
-    grid-column: 3 / span 2;
-    grid-row: 4 / span 2; }
-  .gallery__item--7 {
-    grid-column: 5 / span 1;
-    grid-row: 4 / span 1; }
-  .gallery__item--8 {
-    grid-column: 6 / span 2;
-    grid-row: 3 / span 2; }
-  .gallery__item--9 {
-    grid-column: 8 / span 1;
-    grid-row: 3 / span 3; }
-  .gallery__item--10 {
-    grid-column: 1 / span 1;
-    grid-row: 6 / span 2; }
-  .gallery__item--11 {
-    grid-column: 2 / span 2;
-    grid-row: 6 / span 2; }
-  .gallery__item--12 {
-    grid-column: 4 / span 1;
-    grid-row: 6 / span 2; }
-  .gallery__item--13 {
-    grid-column: 5 / span 3;
-    grid-row: 5 / span 3; }
-  .gallery__item--14 {
-    grid-column: 8 / span 1;
-    grid-row: 6 / span 2; }
+  .gallery__item {
+    box-shadow: 0 0.5rem 1.5rem rgba(46, 61, 73, 0.2);
+    transition: all .2s ease-out; }
+    .gallery__item:hover {
+      box-shadow: 0 0.2px 0.5rem 0 rgba(46, 61, 73, 0.2); }
+    .gallery__item--1 {
+      grid-column: 1 / span 2;
+      grid-row: 1 / span 2; }
+    .gallery__item--2 {
+      grid-column: 3 / span 3;
+      grid-row: 1 / span 3; }
+    .gallery__item--3 {
+      grid-column: 6 / span 1;
+      grid-row: 1 / span 2; }
+    .gallery__item--4 {
+      grid-column: 7 / span 2;
+      grid-row: 1 / span 2; }
+    .gallery__item--5 {
+      grid-column: 1 / span 2;
+      grid-row: 3 / span 3; }
+    .gallery__item--6 {
+      grid-column: 3 / span 2;
+      grid-row: 4 / span 2; }
+    .gallery__item--7 {
+      grid-column: 5 / span 1;
+      grid-row: 4 / span 1; }
+    .gallery__item--8 {
+      grid-column: 6 / span 2;
+      grid-row: 3 / span 2; }
+    .gallery__item--9 {
+      grid-column: 8 / span 1;
+      grid-row: 3 / span 3; }
+    .gallery__item--10 {
+      grid-column: 1 / span 1;
+      grid-row: 6 / span 2; }
+    .gallery__item--11 {
+      grid-column: 2 / span 2;
+      grid-row: 6 / span 2; }
+    .gallery__item--12 {
+      grid-column: 4 / span 1;
+      grid-row: 6 / span 2; }
+    .gallery__item--13 {
+      grid-column: 5 / span 3;
+      grid-row: 5 / span 3; }
+    .gallery__item--14 {
+      grid-column: 8 / span 1;
+      grid-row: 6 / span 2; }
   .gallery__img {
     width: 100%;
     height: 100%;
@@ -358,3 +373,92 @@ body {
   margin: 6rem auto 0;
   text-align: center;
   width: 70%; }
+
+@media screen and (max-width: 64em) {
+  html {
+    font-size: 56.25%; }
+  .container {
+    grid-template-rows: 6rem 80vh repeat(5, min-content);
+    grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
+  .sidebar {
+    grid-column: 1 / -1;
+    grid-row: 1 / span 1; }
+  .nav-btn {
+    margin: 0;
+    position: absolute;
+    right: 2rem;
+    top: 2.9rem; }
+  .features,
+  .homes {
+    padding: 10rem 0; }
+  .footer {
+    padding: 4rem; }
+  .nav {
+    grid-template-columns: repeat(2, minmax(15rem, 1fr));
+    grid-gap: 2rem; }
+  .copyright {
+    margin: 4rem auto 0; } }
+
+@media screen and (max-width: 50em) {
+  .container {
+    grid-template-rows: 6rem 60rem 20vh repeat(5, min-content); }
+  .header {
+    grid-column: 1 / -1; }
+  .realtors {
+    grid-column: 1 / -1;
+    padding: 3rem 1rem; }
+    .realtors__list {
+      grid-template-columns: repeat(6, max-content);
+      grid-column-gap: 3rem; }
+  .copyright {
+    width: 90%; } }
+
+@media screen and (max-width: 25.875em) {
+  html {
+    font-size: 50%; }
+  .container {
+    grid-template-rows: 5rem calc(100vh - 5rem) repeat(6, min-content); }
+  .nav-btn {
+    width: 2.5rem;
+    right: 2rem;
+    top: 2.5rem; }
+    .nav-btn::after, .nav-btn::before {
+      width: 2.5rem; }
+    .nav-btn::after {
+      transform: translateY(0.8rem); }
+    .nav-btn::before {
+      transform: translateY(-1rem); }
+  .header {
+    padding: 10rem 2rem 4rem; }
+    .header__seenon-logos {
+      flex-direction: column;
+      align-items: center; }
+      .header__seenon-logos img:not(:last-child) {
+        margin-bottom: 2rem; }
+  .realtors {
+    grid-column: 1 / -1;
+    padding: 3rem 1rem; }
+    .realtors__list {
+      grid-template-columns: max-content max-content;
+      grid-column-gap: 3rem; }
+  .feature__icon {
+    align-self: center; }
+  .features,
+  .homes {
+    padding: 6rem 0; }
+  .story__pictures {
+    grid-column: 1 / -1; }
+  .story__img--1 {
+    width: 100%;
+    grid-column: 2 / 6;
+    grid-row: 1 / 4;
+    box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1); }
+  .story__img--2 {
+    width: 100%;
+    grid-column: 2 / 6;
+    grid-row: 4 / 7;
+    z-index: 10;
+    box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2); }
+  .story__content {
+    grid-column: 1 / -1;
+    grid-row: 5 / span 1; } }
