--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -14,6 +14,11 @@ $color-grey-dark-2: #6D5D4B;
 $font-primary: 'Nunito', sans-serif;
 $font-display: 'Josefin Sans', sans-serif;
 
+
+$tab-port: 64em;
+$tab: 50em;
+$mobile: 25.875em;
+
 *,
 *::after,
 *::before {
