--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -2,14 +2,14 @@
     background-color: $color-secondary;
     grid-column: full-start / col-end 6;
 
-    background-image: linear-gradient(rgba($color-secondary, .93), rgba($color-secondary, .93)), url(../img/hero.jpeg);
+    background-image: linear-gradient(rgba($color-secondary, .93), rgba($color-secondary, .93)), url(../img/hero.jpg);
     background-size: cover;
     background-position: center;
     padding: 4rem 8rem 8rem;
 
     display: grid;
-    grid-template-rows: 1fr min-content 6rem 1fr;
-    grid-template-columns: max-content;
+    grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
+    grid-template-columns: minmax(min-content, max-content);
     justify-content: center;
     grid-row-gap: 1.5rem;
 
@@ -46,7 +46,8 @@
         justify-content: space-around;
 
         img {
-            height: 2.5rem;
+            max-height: 2.5rem;
+            max-width: 100%;
             filter: brightness(70%);
         }
     }
