--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -59,10 +59,12 @@
     border-radius: 0;
     padding: 1.8rem 3rem;
     cursor: pointer;
-    transition: background-color .2s ease-out;
+    box-shadow: 0 .5rem 2.5rem rgba(46,61,73,.2);
+    transition: all .2s ease-out;
 
     &:hover {
         background-color: $color-primary-dark;
+        box-shadow: 0 .5rem 1rem 0 rgba(46,61,73,.2);
     }
 }
 
