--- a/css/style.css
+++ b/css/style.css
@@ -417,6 +417,7 @@ body {
   html {
     font-size: 50%; }
   .container {
+    grid-template-columns: [full-start] minmax(2.5rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(2.5rem, 1fr) [full-end];
     grid-template-rows: 5rem calc(100vh - 5rem) repeat(6, min-content); }
   .nav-btn {
     width: 2.5rem;
@@ -429,10 +430,13 @@ body {
     .nav-btn::before {
       transform: translateY(-1rem); }
   .header {
-    padding: 10rem 2rem 4rem; }
+    padding: 6rem 2rem 4rem; }
     .header__seenon-logos {
-      flex-direction: column;
-      align-items: center; }
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: space-around; }
+      .header__seenon-logos img {
+        margin: 2rem; }
       .header__seenon-logos img:not(:last-child) {
         margin-bottom: 2rem; }
   .realtors {
