--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -4,6 +4,7 @@
     }
 
     .container {
+        grid-template-columns: [full-start] minmax(2.5rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(2.5rem, 1fr) [full-end];
         grid-template-rows: 5rem calc(100vh - 5rem) repeat(6, min-content);
     }
 
@@ -28,11 +29,16 @@
 
     .header {
 
-        padding: 10rem 2rem 4rem;
+        padding: 6rem 2rem 4rem;
         
         &__seenon-logos {
-            flex-direction: column;
+            flex-wrap: wrap;
             align-items: center;
+            justify-content: space-around;
+
+            img {
+                margin: 2rem;
+            }
 
             img:not(:last-child) {
                 margin-bottom: 2rem;
